Modify access rules

--- a/project.config
+++ b/project.config
@@ -2,3 +2,9 @@
 	inheritFrom = All-Projects
 [submit]
 	action = inherit
+[access "refs/for/refs/heads/*"]
+	pushMerge = group Xiaomi Maintainers
+[access "refs/heads/*"]
+	create = group Xiaomi Maintainers
+	push = group Xiaomi Maintainers
+	pushMerge = group Xiaomi Maintainers
