Modify access rules

--- a/project.config
+++ b/project.config
@@ -8,3 +8,5 @@
 	create = group Xiaomi Maintainers
 	push = group Xiaomi Maintainers
 	pushMerge = group Xiaomi Maintainers
+	label-Code-Review = -2..+2 group Xiaomi Maintainers
+	label-Verified = -1..+1 group Xiaomi Maintainers
