--- a/project.config
+++ b/project.config
@@ -10,3 +10,4 @@
 	pushMerge = group Xiaomi Maintainers
 	label-Code-Review = -2..+2 group Xiaomi Maintainers
 	label-Verified = -1..+1 group Xiaomi Maintainers
+	submit = group Xiaomi Maintainers
