Modify access rules

--- a/project.config
+++ b/project.config
@@ -6,7 +6,7 @@
 	pushMerge = group Xiaomi Maintainers
 [access "refs/heads/*"]
 	create = group Xiaomi Maintainers
-	push = group Xiaomi Maintainers
+	push = +force group Xiaomi Maintainers
 	pushMerge = group Xiaomi Maintainers
 	label-Code-Review = -2..+2 group Xiaomi Maintainers
 	label-Verified = -1..+1 group Xiaomi Maintainers
