--- a/meta/config.json
+++ b/meta/config.json
@@ -5,4 +5,5 @@
     "image": "meta/device_image.png",
     "state": "official",
     "device": "sweet"
+    "readme": "https://github.com/omnirom/android_device_xiaomi_sweet/blob/android-13.0/meta/installguide.md"
 }
